Bug 413908 - For relationships, partially unsupported properties are displayed in the properties dialog on the style page
Summary: For relationships, partially unsupported properties are displayed in the prop...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.29.2 (KDE Applications 19.08.2)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-07 09:59 UTC by Ralf Habacker
Modified: 2019-11-07 10:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.29.80 (KDE Applications 19.11.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-11-07 09:59:31 UTC
STEPS TO REPRODUCE
1. start umbrello
2. add two classes
3. add an aggregation between the two classes
4. open property dialog of the aggregation
5. switch to style page
6. change fill color and/or use fill color
7. save changes and close property dialog

OBSERVED RESULT
The changed values does not have any effect because they are unsupported

EXPECTED RESULT
The related properties should be disabled or hided to not confuse users

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Leap 15.1
KDE Frameworks Version: 5.55
Qt Version: 5.9.7
Comment 1 Ralf Habacker 2019-11-07 10:07:39 UTC
Git commit 3480775f4603e2b89288b0eb89bd8e9d22587fc0 by Ralf Habacker.
Committed on 07/11/2019 at 10:06.
Pushed by habacker into branch 'master'.

Fix 'For relationships, partially unsupported properties are displayed in the properties dialog on the style page'
FIXED-IN:2.29.80 (KDE Applications 19.11.80)

M  +15   -4    umbrello/dialogs/pages/umlwidgetstylepage.cpp

https://commits.kde.org/umbrello/3480775f4603e2b89288b0eb89bd8e9d22587fc0