Fix 'For relationships, partially unsupported properties are displayed in the properties dialog on the style page'

BUG:413908
FIXED-IN:2.29.80 (KDE Applications 19.11.80)